add two top section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<title>Nayon Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<section class="top-banner">
+		<div class="half-width">
+			<h1>WELLCOME TO</h1>
+			<h1><span class="name">NAYON ROY</span> WORLD!</h1>
+			<h3>Front End Developer</h3>
+			<p>Hello, I am Nayon Roy. I am a front end developer. Recently, I complete basic html,css , git and git. Now , I am try to make website. This works I enjoy. It give us pleaser. Thanks a lot.</p>
+			<a class="linked-btn" href="#" target="_blank">HIRE ME</a>
+		</div>
+		<div class="half-width">
+			<img src="images/my-bg2.png" alt="">
+		</div>
+	</section>
+	<section class="dream-big">
+		<div class="half-width">
+			<img src="images/my-bg.png" alt="">
+		</div>
+		<div class="half-width">
+			<h1>DREAM BIG</h1>
+			<h3>Become a web developer</h3>
+			<p>I am already complete basic html and css. I can build any simple website. I am learing web development course in Programming Hero. My goal is make 3 website and learn most important topic of web development.</p>
+			<a href="#" target="_blank" class="linked-btn">DOWNLOAD RESUME</a>
+		</div>
+	</section>
 </body>
 </html>
