--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section class="top-banner">
 		<div class="half-width">
 			<h1>WELLCOME TO</h1>
-			<h1><span class="name">NAYON ROY</span> WORLD!</h1>
+			<h1><span class="orange-color">NAYON ROY</span> WORLD!</h1>
 			<h3>Front End Developer</h3>
 			<p>Hello, I am Nayon Roy. I am a front end developer. Recently, I complete basic html,css , git and git. Now , I am try to make website. This works I enjoy. It give us pleaser. Thanks a lot.</p>
 			<a class="linked-btn" href="#" target="_blank">HIRE ME</a>
@@ -34,5 +34,24 @@
 			<a href="#" target="_blank" class="linked-btn">DOWNLOAD RESUME</a>
 		</div>
 	</section>
+	<section class="experience-area">
+		<h1>Experience</h1>
+		<div class="experience">
+            <div id="full" class="experience-item">
+				<h2>Full Stack Developer</h2>
+				<h3 class="orange-color">2024-Present | Pro Level Developer</h3>
+				<p>I am a Full Stack Developer. I am complete html, css . I  am completing some websit . like: E-commerce, Bloging, Health Cemter etc. Now I am work some projectr.</p>
+			 </div> 
+			<div id="baby" class="experience-item">
+				<h2 > Baby Web Developer</h2>
+				<h3 class="orange-color">2022-2024 | Hero Learner</h3>
+				<p>I complete my jurney in Programming Hero. They provides web development course. There are I learn basic to advance html, css and javascript.</p>
+				</p>
+			</div> 
+		</div>
+	</section>
 </body>
+<footer>
+	<p>© Nayon Roy 2022 | A Programming Hero initiative</p>
+</footer>
 </html>
